<resources>
    <string name="app_name">SamsungRemote</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="SamsungRemote">Samsung Remote</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="VolumeUp">Vol +</string>
    <string name="VolumeDown">Vol -</string>
    <string name="ChannelUp">Ch +</string>
    <string name="ChannelDown">Ch -</string>
    <string name="menu">Menü</string>
    <string name="Source">Source</string>
    <string name="returnText">Return</string>
    <string name="exitText">Exit</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>