<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_VolUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="592dp"
        android:onClick="onVolumeUpClicked"
        android:text="@string/VolumeUp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_CHUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="592dp"
        android:onClick="onVolumeUpClicked"
        android:text="@string/ChannelUp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_VolDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="544dp"
        android:text="@string/VolumeDown"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_CHDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="544dp"
        android:text="@string/ChannelDown"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ButtonPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/ic_lock_power_off"
        android:visibility="visible"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="11dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/ButtonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:visibility="visible"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="19dp"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ButtonMute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/stat_notify_call_mute"
        android:visibility="visible"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="83dp"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ButtonUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/arrow_up_float"
        android:visibility="visible"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="118dp"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ButtonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/arrow_down_float"
        android:visibility="visible"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="189dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/ButtonEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="181dp"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ButtonDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/arrow_down_float"
        android:visibility="visible"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="245dp"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ButtonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/arrow_down_float"
        android:visibility="visible"
        tools:layout_editor_absoluteX="261dp"
        tools:layout_editor_absoluteY="189dp"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/SmartHubButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/btn_star_big_on"
        android:visibility="visible"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="229dp"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>